--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ before_install:
   - docker build -t zoglad/react-test -f ./client/Dockerfile.dev ./client
 
 script:
-  - docker rum zoglad/react-test npm test -- --coverage
+  - docker run zoglad/react-test npm test -- --coverage
 
 after_success:
   - docker build -t zoglad/multi-client ./client
