--- a/.travis.yml
+++ b/.travis.yml
@@ -20,3 +20,16 @@ after_success:
   - docker push zoglad/multi-nginx
   - docker push zoglad/multi-server
   - docker push zoglad/multi-worker
+
+deploy:
+  provider: elasticbeanstalk
+  region: eu-west-1
+  app: multi-docker
+  env: Multidocker-env
+  bucket_name: elasticbeanstalk-us-east-1-535518648590
+  bucket_path: docker-multi
+  on:
+    branch: master
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key:
+    secure: $AWS_SECRET_KEY
