changed travis yml deploy mispell

--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,7 @@ deploy:
   provider: elasticbeanstalk
   region: eu-west-1
   app: multi-docker
-  env: Multidocker-env
+  env: MultiDocker-env
   bucket_name: elasticbeanstalk-us-east-1-535518648590
   bucket_path: docker-multi
   on:
